--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
             <button id="stop">Stop</button>
         </div>
     </div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
