Refatoração no código html, css e js para mostras as cores aleatórias em hexadecimal.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div id="container">
         <div class="circle"></div>
         <div class="input-data">
-            <input type="text" name="" id="">
-            <input type="text" name="" id="">
-            <input type="text" name="" id="">
+            <input type="text" name="hex-color" id="hex-color" value="ffffff">
         </div>
         <div class="interation-buttons">
             <button id="start">Start</button>
